--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,20 +4,19 @@
    "description": "",
    "main": "index.js",
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "nodemon --exec ts-node src/index.ts"
    },
    "keywords": [],
    "author": "",
    "license": "ISC",
    "dependencies": {
       "@types/lodash": "^4.14.116",
-      "@types/node": "^10.9.0",
       "graphql-yoga": "^1.16.1",
       "lodash": "^4.17.10",
       "merge-graphql-schemas": "^1.5.3",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.7",
+      "typeorm": "^0.2.7",
       "typescript": "^3.0.1"
    },
    "devDependencies": {
@@ -27,7 +26,6 @@
       "ts-node": "3.3.0",
       "tslint": "^5.11.0",
       "tslint-config-airbnb": "^5.10.0",
-      "tslint-config-prettier": "^1.15.0",
-      "typescript": "2.5.2"
+      "tslint-config-prettier": "^1.15.0"
    }
 }
