--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^10.9.2",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "react-cosmos": "^4.6.4",
     "react-scripts-ts": "2.17.0",
     "typescript": "^3.0.1"
   },
@@ -18,6 +19,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "cosmos": "cosmos --config ./cosmos.config.js",
+    "cosmos:export": "cosmos-export"
   }
 }
