--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,14 +4,23 @@
   "private": true,
   "dependencies": {
     "antd": "^3.8.3",
+    "history": "^4.7.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
+    "@types/history": "^4.7.0",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.9.2",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
+    "@types/react-router-redux": "^5.0.15",
     "react-cosmos": "^4.6.4",
     "react-scripts-ts": "2.17.0",
     "typescript": "^3.0.1"
