--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "tslint-config-airbnb": "^5.10.0"
   },
   "devDependencies": {
     "@types/history": "^4.7.0",
