--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.8.3",
+    "formik": "^1.1.1",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
@@ -12,7 +13,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "styled-components": "^3.4.5"
   },
   "devDependencies": {
     "@types/history": "^4.7.0",
