--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-dropzone": "^5.0.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -23,6 +24,7 @@
     "@types/node": "^10.9.2",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "@types/react-dropzone": "^4.2.2",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-redux": "^5.0.15",
     "react-cosmos": "^4.6.4",
